--- a/src/resources/config.properties
+++ b/src/resources/config.properties
@@ -1,8 +1,10 @@
 #Properties
-#Thu Sep 26 23:28:03 IST 2019
+#Fri Sep 27 02:31:31 IST 2019
 platformName=ANDROID
 serverURL=http\://127.0.0.1\:4723/wd/hub
+password=quickride@qwerty
 appPackage=com.disha.quickride
 deviceName=Galaxy J7 Prime
 appActivity=com.disha.quickride.androidapp.startup.QRSplashActivity
+loginId=954959520000000
 platformVersion=8.1.0
